# comp-math2020

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  install_support.sh
lab1/: CMakeLists.txt  README.md  compute.hpp  functions.cpp  functions.hpp  gnuplot.hpp  main.cpp  plot_to_jpg.gnu  plot_to_png.gnu  plot_to_window.gnu  tmp_fstream.hpp
lab1/output/: function_1_nonlinear.txt  function_2_nonlinear.txt  function_3_nonlinear.txt  function_4_nonlinear.txt  function_5.txt  function_5_nonlinear.txt
lab2/: CMakeLists.txt  compute.hpp  direct_methods.hpp  iterative_methods.hpp  main.cpp
support/: install.sh
support/include/: gnuplot.hpp  matrix.hpp  plot_data.hpp  tmp_fstream.hpp  vector.hpp
support/lib/: CMakeLists.txt  gnuplot.cpp
